[fix]ファイル名の変更

--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://yuta97.github.io"
+  "homepage": "http://yuta97.github.io/mine-sweeper/"
 }
